21-GKE-Gateway-API/07-GKE-Gateway-API-Domain-Routing/p2-regional-k8sresources-yaml/c4-03-gateway-app1-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: app1-route
spec:
  parentRefs:
  - kind: Gateway
    name: mygateway1-regional
    sectionName: https
  hostnames:
  - "app1.stacksimplify.com"    
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /app1
    backendRefs:
    - name: myapp1-service
      port: 80
